...
  if (!sessions?.length) {
    return (
      <View
        style={[styles.container, styles.emptyStateContainer, { backgroundColor: Theme['bg-primary'] }]}
      >
        <Text variant="h6-400" color="text-primary">
          No connected apps yet
        </Text>
        <Text variant="lg-400" color="text-secondary" center>
          Apps you connect will show up here. Scan a QR code to add your first one.
        </Text>
        <ActionButton
          style={styles.emptyStateButton}
...
