...
  createAppKit,
  AppKitButton,
  AppKit,
  AppKitProvider,
  solana,
  bitcoin,
  NetworkButton,
} from '@reown/appkit-react-native';
import {
  SolanaAdapter,
  PhantomConnector,
  SolflareConnector,
} from '@reown/appkit-solana-react-native';
...
