...
          >
            <NfcTapSvg width={18} height={18} fill={Theme['icon-invert']} />
          </Button>
        )}
        <Button
          onPress={onScannerPress}
          testID="button-scan"
          style={[styles.actionButton, { backgroundColor: Theme['bg-invert'] }]}
        >
          <BarcodeSvg width={18} height={18} fill={Theme['text-invert']} />
        </Button>
      </View>
    </View>
...
