...
            <QRCode
              size={isTablet ? 420 : 300}
              uri={qrUri}
              imageSrc={qrLogoSource}
              logoBorderRadius={100}
              onPress={handleCopyPaymentUrl}
              testID="pos-qr-code"
            >
              <Image
                source={assets?.[0]}
                style={[styles.logo, isTablet && styles.logoTablet]}
              />
            </QRCode>
...
