appId: com.walletconnect.web3modal.rnsample.internal
name: React Native Dapp to React Native Wallet Personal Sign Rejected
---
- launchApp:
    permissions:
      all: allow
- startRecording: "Native personal_sign Rejected"
- extendedWaitUntil:
    visible: "Sign message"
    timeout: 10000
- tapOn: "Sign message"
- runFlow:
    when:
      visible: "Open"
      platform: iOS
    commands:
      - tapOn: "Open"
- extendedWaitUntil:
    visible: 
        id: "reject-button"
    timeout: 10000
- tapOn:
    id: "reject-button"
- assertVisible: "Request failure"
- stopRecording